documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.VB

    Public Declare Function PC708_RTSWDRd Lib "P71W32.DLL" Alias "_PC708_RTSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_RTSWDWr Lib "P71W32.DLL" Alias "_PC708_RTSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SARRdW Lib "P71W32.DLL" Alias "_PC708_SARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_SARWrW Lib "P71W32.DLL" Alias "_PC708_SARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_SchedBuild Lib "P71W32.DLL" Alias "_PC708_SchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedBuildEx Lib "P71W32.DLL" Alias "_PC708_SchedBuildEx@28" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByRef period As UInt16, ByVal buf As IntPtr, ByVal bufsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedBuildExx Lib "P71W32.DLL" Alias "_PC708_SchedBuildExx@28" (ByVal frametime As UInt32, ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef period As UInt16, ByVal buf As IntPtr, ByVal bufsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedCalc Lib "P71W32.DLL" Alias "_PC708_SchedCalc@8" (ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedInsEnd Lib "P71W32.DLL" Alias "_PC708_SchedInsEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedInsMsg Lib "P71W32.DLL" Alias "_PC708_SchedInsMsg@12" (ByVal index As UInt16, ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedInsStart Lib "P71W32.DLL" Alias "_PC708_SchedInsStart@12" (ByVal frametime As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_SchedMaxval Lib "P71W32.DLL" Alias "_PC708_SchedMaxval@8" (ByRef arrayval As UInt16, ByVal arrayvalcount As UInt16) As UInt16
    Public Declare Function PC708_SchedMinval Lib "P71W32.DLL" Alias "_PC708_SchedMinval@8" (ByRef arrayval As UInt16, ByVal arrayvalcount As UInt16) As UInt16
    Public Declare Function PC708_Shl Lib "P71W32.DLL" Alias "_PC708_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function PC708_Shr Lib "P71W32.DLL" Alias "_PC708_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub PC708_TimerClear Lib "P71W32.DLL" Alias "_PC708_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_TimerRd Lib "P71W32.DLL" Alias "_PC708_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_TimerResolution Lib "P71W32.DLL" Alias "_PC708_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_TimerResolutionEx Lib "P71W32.DLL" Alias "_PC708_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_ValAsciiCmpi Lib "P71W32.DLL" Alias "_PC708_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function PC708_ValAsciiCpy Lib "P71W32.DLL" Alias "_PC708_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub PC708_ValAsciiTrimLead Lib "P71W32.DLL" Alias "_PC708_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub PC708_ValAsciiTrimTrail Lib "P71W32.DLL" Alias "_PC708_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function PC708_ValFromAscii Lib "P71W32.DLL" Alias "_PC708_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function PC708_ValGetBits Lib "P71W32.DLL" Alias "_PC708_ValGetBits@12" (ByVal oldvalue As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function PC708_ValIncAscii Lib "P71W32.DLL" Alias "_PC708_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function PC708_ValInccAscii Lib "P71W32.DLL" Alias "_PC708_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function PC708_ValIsLower Lib "P71W32.DLL" Alias "_PC708_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function PC708_ValLenAscii Lib "P71W32.DLL" Alias "_PC708_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function PC708_ValPackCWD Lib "P71W32.DLL" Alias "_PC708_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Function PC708_ValPackRTCWD Lib "P71W32.DLL" Alias "_PC708_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
    Public Declare Function PC708_ValPutBits Lib "P71W32.DLL" Alias "_PC708_ValPutBits@16" (ByVal oldvalue As UInt16, ByVal newfld As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function PC708_ValToAscii Lib "P71W32.DLL" Alias "_PC708_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function PC708_ValToUpper Lib "P71W32.DLL" Alias "_PC708_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Sub PC708_ValUnpackCWD Lib "P71W32.DLL" Alias "_PC708_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
    Public Declare Sub PC708_ValUnpackRTCWD Lib "P71W32.DLL" Alias "_PC708_ValUnpackRTCWD@28" (ByVal cwd As UInt16, ByRef bcastflag As Int32, ByRef mcflag As Int32, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef count As Int32)
    Public Declare Function PC708_XmtAlloc Lib "P71W32.DLL" Alias "_PC708_XmtAlloc@8" (ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtConfigExxx Lib "P71W32.DLL" Alias "_PC708_XmtConfigExxx@24" (ByVal bcconfigval As UInt32, ByVal msgconfigval As UInt32, ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtCountRd Lib "P71W32.DLL" Alias "_PC708_XmtCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_XmtCountWr Lib "P71W32.DLL" Alias "_PC708_XmtCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_XmtDataCountRd Lib "P71W32.DLL" Alias "_PC708_XmtDataCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_XmtDataCountWr Lib "P71W32.DLL" Alias "_PC708_XmtDataCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_XmtFreq Lib "P71W32.DLL" Alias "_PC708_XmtFreq@8" (ByVal framefreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtFreqEx Lib "P71W32.DLL" Alias "_PC708_XmtFreqEx@16" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtFreqExx Lib "P71W32.DLL" Alias "_PC708_XmtFreqExx@36" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal bcconfigval As UInt32, ByVal bctotal As UInt16, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtIndex Lib "P71W32.DLL" Alias "_PC708_XmtIndex@8" (ByVal framenum As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_XmtNumberRd Lib "P71W32.DLL" Alias "_PC708_XmtNumberRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_XmtNumberWr Lib "P71W32.DLL" Alias "_PC708_XmtNumberWr@8" (ByVal brdnum As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_XmtPeriod Lib "P71W32.DLL" Alias "_PC708_XmtPeriod@8" (ByVal frameperiod As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtPeriodEx Lib "P71W32.DLL" Alias "_PC708_XmtPeriodEx@16" (ByVal frameperiod As UInt32, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtPeriodExx Lib "P71W32.DLL" Alias "_PC708_XmtPeriodExx@36" (ByVal frameperiod As UInt32, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal bcconfigval As UInt32, ByVal bctotal As UInt16, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_XmtRd Lib "P71W32.DLL" Alias "_PC708_XmtRd@12" (ByRef buf As UInt16, ByVal framenum As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_XmtSizeWr Lib "P71W32.DLL" Alias "_PC708_XmtSizeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)

    '/**
    '*
    '*  Transmitter configuration options
    '*
    '**/

    Public Const XMTCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const XMTCFG_BUSA As UInt32 = &H0L    '//Message will be transmitted on bus A (default)
    Public Const XMTCFG_BUSB As UInt32 = &H4L    '//Message will be transmitted on bus B
    Public Const XMTCFG_NOSWAP As UInt32 = &H0L  '//Disable bit swapping (default)
    Public Const XMTCFG_SWAP As UInt32 = &H4000L    '//Enable bit swapping

    '/**
    '*
    '*  Receiver configuration options
    '*
    '**/

    Public Const RCVCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const RCVCFG_BUSA As UInt32 = &H0L    '//Respond to channel A (default)
    Public Const RCVCFG_BUSB As UInt32 = &H10000L    '//Respond to channel B
    Public Const RCVCFG_NOSWAP As UInt32 = &H0L  '//Disable bit swapping (default)
    Public Const RCVCFG_SWAP As UInt32 = &H8000L    '//Enable bit swapping
    Public Const RCVCFG_WORDSYNC As UInt32 = &H0L    '//Sync on words (default)
    Public Const RCVCFG_BITSYNC As UInt32 = &H80000L '//Sync on each bit

    '/**
    '*
    '*  Bus controller configuration options
    '*
    '**/
